--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.5.0"
 chrono = "0.4.41"
 csv = "1.3.1"
-polars = "0.46.0"
+hex = "0.4.3"
 rusqlite = "0.29.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "2.0.12"
 [dependencies.uuid]
 version = "1.17.0"
 features = [
