--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "kobo-reader-db"
 version = "0.1.0"
 edition = "2021"
+description = "A Rust library to parse and analyze Kobo e-reader SQLite databases."
+license = "MIT"
+repository = "https://github.com/mfdaves/kobo-reader-db"
+keywords = ["kobo", "ereader", "sqlite", "data-analysis", "reading"]
+categories = ["command-line-utilities", "data-structures", "parsing"]
 
 [dependencies]
 byteorder = "1.5.0"
