--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ byteorder = "1.5.0"
 chrono = "0.4.41"
 csv = "1.3.1"
 hex = "0.4.3"
+markdown2pdf = "0.1.3"
 rusqlite = "0.29.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -21,4 +22,5 @@ thiserror = "2.0.12"
 version = "1.17.0"
 features = [
     "v4",
+    "serde",
 ]
